# rust-xyz-chem

./: Cargo.toml  README.md  atoms.xyz
examples/: read.rs
path/to/: file.xyz
src/: data.rs  error.rs  lib.rs  main.rs  tests.rs
tests/: test_file_parser.rs  testfile.xyz
