[package]
name = "rust-xyz-chem"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "A small crate for reading and writing chemical `.xyz` files."
repository = "https://github.com/hassomepicklejuice/rust-xyz-chem"
readme = "README.md"
keywords = ["chemistry", "parser", "xyz", "molecule", "atom"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
